main + footer (scss problem)

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -1,3 +1,4 @@
-$headingsColor: #002D75;
-$fontFamily: "Raleway", sans-serif;
-$bluehover: rgb(55, 55, 255);
+$fontFamily: 'Roboto', sans-serif;
+$lightblue: #0282F9;
+$footer_bottom: #303030;
+$text_grey: #959595;
