--- a/src/assets/scss/partials/_commons.scss
+++ b/src/assets/scss/partials/_commons.scss
@@ -10,15 +10,12 @@ html {
     font-family: $fontFamily;
 }
 
-
-
 .container {
     width: 80%;
     margin: 0 auto;
     display: flex;
-    align-items: center;
 }
 
-.text-center {
-    text-align: center;
+a{
+    cursor: pointer;
 }
